Bleep. Bloop. I am a bot.

--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -410,8 +410,8 @@ system) with the given name with <code>pkg-config</code> if possible and with
 otherwise. This function supports the following keyword arguments:</p>
 <ul>
 <li>
-<code>default_options</code> <em>(added 0.37.0)</em> an array of option values that
-override those set in the project's <code>default_options</code> invocation
+<code>default_options</code> <em>(added 0.37.0)</em> an array of default option values
+that override those set in the subproject's <code>meson_options.txt</code>
 (like <code>default_options</code> in <a href="Reference-manual.html#project"><code>project()</code></a>, they only have
 effect when Meson is run for the first time, and command line
 arguments override any default options in build files)</li>
@@ -1072,11 +1072,11 @@ example a subproject called <code>foo</code> must be located in
 arguments:</p>
 <ul>
 <li>
-<code>default_options</code>, <em>(added 0.37.0)</em> an array of default option
-values that override those set in the project's <code>default_options</code>
-invocation (like <code>default_options</code> in <code>project</code>, they only have
-effect when Meson is run for the first time, and command line
-arguments override any default options in build files)</li>
+<code>default_options</code> <em>(added 0.37.0)</em> an array of default option values
+that override those set in the subproject's <code>meson_options.txt</code>
+(like <code>default_options</code> in <code>project</code>, they only have effect when
+Meson is run for the first time, and command line arguments override
+any default options in build files)</li>
 <li>
 <code>version</code> keyword argument that works just like the one in
 <code>dependency</code>. It specifies what version the subproject should be,
@@ -1643,6 +1643,12 @@ page</a> It has three methods:</p>
 <p><code>get(varname, default_value)</code> returns the value of <code>varname</code>, if the
 value has not been set returns <code>default_value</code> if it is defined
 <em>(added 0.38.0)</em> and errors out if not</p>
+</li>
+<li>
+<p><code>get_unquoted(varname, default_value)</code> returns the value of <code>varname</code>
+but without surrounding double quotes (<code>"</code>). If the value has not been
+set returns <code>default_value</code> if it is defined and errors out if not.
+Available since 0.43.0</p>
 </li>
 <li>
 <p><code>has(varname)</code>, returns <code>true</code> if the specified variable is set</p>
