--- a/Reference-tables.html
+++ b/Reference-tables.html
@@ -309,6 +309,10 @@ remain stable in future releases.</p>
 <td> windows</td>
 <td> Any version of Windows</td>
 </tr>
+<tr>
+<td> cygwin</td>
+<td> The Cygwin environment for Windows</td>
+</tr>
 </tbody>
 </table>
 <p>Any string not listed above is not guaranteed to remain stable in
