--- a/Syntax.html
+++ b/Syntax.html
@@ -210,7 +210,7 @@ num = string_var.to_int()
 single quote do it like this:</p>
 <pre><code class="language-meson">single quote = 'contains a \' character'
 </code></pre>
-<p>Similarly <code>\n</code> gets converted to a newline and <code>\\\\</code> to a single
+<p>Similarly <code>\n</code> gets converted to a newline and <code>\\</code> to a single
 backslash.</p>
 <h4 id="string-concatenation">String concatenation</h4>
 <p>Strings can be concatenated to form a new string using the <code>+</code> symbol.</p>
