Bleep. Bloop. I am a bot.

--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -575,7 +575,7 @@ target by overriding the default. By default on Windows this is
 for this target only, since 0.40.0</li>
 <li>
 <code>d_import_dirs</code> list of directories to look in for string imports used
-in the D programmling language</li>
+in the D programming language</li>
 <li>
 <code>d_unittest</code>, when set to true, the D modules are compiled in debug mode</li>
 <li>
