--- a/Conference-presentations.html
+++ b/Conference-presentations.html
@@ -173,7 +173,7 @@ $('body').removeClass('no-script');
 <p>GStreamer conference 2015, <a href="https://gstconf.ubicast.tv/videos/done-in-60-seconds-a-new-build-system-for-gstreamer">Done in 6.0 seconds</a> (jpakkane)</p>
 </li>
 <li>
-<p>LCA 2016, <a href="https://www.youtube.com/watch?v=CTJtKtQ8R5k&amp;feature=youtu.be">Builds, dependencies and deployment in the modern multiplatform world</a> (jpakkane)</p>
+<p>LCA 2016, <a href="https://www.youtube.com/watch?v=CTJtKtQ8R5k">Builds, dependencies and deployment in the modern multiplatform world</a> (jpakkane)</p>
 </li>
 <li>
 <p>GUADEC 2016, <a href="https://media.ccc.de/v/44-making_your_gnome_app_compile_24x_faster">Making your GNOME app compile 2.4x faster</a> (nirbheek)</p>
