--- a/Qt5-module.html
+++ b/Qt5-module.html
@@ -160,7 +160,7 @@ $('body').removeClass('no-script');
 <div id="page-description" data-hotdoc-source="Qt5-module.md" data-hotdoc-role="main">
 <h1 id="qt5-module">Qt5 module</h1>
 <p>The Qt5 module provides tools to automatically deal with the various
-tools and steps required for Qt. The module has one method.</p>
+tools and steps required for Qt. The module has two methods.</p>
 <h2 id="preprocess">preprocess</h2>
 <p>This method takes the following keyword arguments:</p>
 <ul>
@@ -173,6 +173,18 @@ tools and steps required for Qt. The module has one method.</p>
 <code>moc_extra_arguments</code>, any additional arguments to <code>moc</code> (optional). Available since v0.44.0.</li>
 </ul>
 <p>It returns an opaque object that should be passed to a main build target.</p>
+<h2 id="compile_translations-since-v0440">compile_translations (since v0.44.0)</h2>
+<p>This method generates the necessary targets to build translation files with lrelease, it takes the following keyword arguments:</p>
+<ul>
+<li>
+<code>ts_files</code>, the list of input translation files produced by Qt's lupdate tool.</li>
+<li>
+<code>install</code> when true, this target is installed during the install step (optional).</li>
+<li>
+<code>install_dir</code> directory to install to (optional).</li>
+<li>
+<code>build_by_default</code> when set to true, to have this target be built by default, that is, when invoking plain ninja; the default value is false (optional).</li>
+</ul>
 <p>A simple example would look like this:</p>
 <pre><code class="language-meson">qt5 = import('qt5')
 qt5_dep = dependency('qt5', modules: ['Core', 'Gui'])
@@ -180,13 +192,13 @@ inc = include_directories('includes')
 moc_files = qt5.preprocess(moc_headers : 'myclass.h',
                            moc_extra_arguments: ['-DMAKES_MY_MOC_HEADER_COMPILE'],
                            include_directories: inc)
+translations = qt5.compile_translations(ts_files : 'myTranslation_fr.ts', build_by_default : true)
 executable('myprog', 'main.cpp', 'myclass.cpp', moc_files,
            include_directories: inc,
            dependencies : qt5_dep)
 </code></pre>
 <p>The 'modules' argument is used to include Qt modules in the project.
-See the Qt documentation for the <a href="http://doc.qt.io/qt-5/qtmodules.html">list of
-modules</a>.</p>
+See the Qt documentation for the <a href="http://doc.qt.io/qt-5/qtmodules.html">list of modules</a>.</p>
 
 </div>
 
