--- a/Subprojects.html
+++ b/Subprojects.html
@@ -159,49 +159,62 @@ $('body').removeClass('no-script');
 				
 <div id="page-description" data-hotdoc-source="Subprojects.md" data-hotdoc-role="main">
 <h1 id="subprojects">Subprojects</h1>
-<p>Some platforms do not provide a native packaging system. In these cases it is common to bundle all third party libraries in your source tree. This is usually frowned upon because it makes it hard to add these kinds of projects into e.g. those Linux distributions that forbid bundled libraries.</p>
-<p>Meson tries to solve this problem by making it extremely easy to provide both at the same time. The way this is done is that Meson allows you to take any other Meson project and make it a part of your build without (in the best case) any changes to its Meson setup. It becomes a transparent part of the project. The basic idiom goes something like this.</p>
-<pre><code class="language-meson">dep = dependency('foo', required : false)
-if dep.found()
-  # set up project using external dependency
-else
-  subproject('foo')
-  # set up rest of project as if foo was provided by this project
-endif
+<p>Some platforms do not provide a native packaging system. In these
+cases it is common to bundle all third party libraries in your source
+tree. This is usually frowned upon because it makes it hard to add
+these kinds of projects into e.g. those Linux distributions that
+forbid bundled libraries.</p>
+<p>Meson tries to solve this problem by making it extremely easy to
+provide both at the same time. The way this is done is that Meson
+allows you to take any other Meson project and make it a part of your
+build without (in the best case) any changes to its Meson setup. It
+becomes a transparent part of the project. The basic idiom goes
+something like this.</p>
+<pre><code class="language-meson">dep = dependency('foo', fallback : [subproject_name, variable_name]
 </code></pre>
-<p>All Meson features of the subproject, such as project options keep working and can be set in the master project. There are a few limitations, the most important being that global compiler arguments must be set in the main project before calling subproject. Subprojects must not set global arguments because there is no way to do that reliably over multiple subprojects. To check whether you are running as a subproject, use the <code>is_subproject</code> function.</p>
-<p>As an example, suppose we have a simple project that provides a shared library.</p>
+<p>As an example, suppose we have a simple project that provides a shared
+library. It would be set up like this.</p>
 <pre><code class="language-meson">project('simple', 'c')
 i = include_directories('include')
 l = shared_library('simple', 'simple.c', include_directories : i, install : true)
+simple_dep = declare_dependency(include_directories : i,
+  link_with : l)
 </code></pre>
-<p>Then we could use that from a master project. First we generate a subdirectory called <code>subprojects</code> in the root of the master directory. Then we create a subdirectory called <code>simple</code> and put the subproject in that directory. Now the subproject can be used like this.</p>
+<p>Then we could use that from a master project. First we generate a
+subdirectory called <code>subprojects</code> in the root of the master
+directory. Then we create a subdirectory called <code>simple</code> and put the
+subproject in that directory. Now the subproject can be used like
+this.</p>
 <pre><code class="language-meson">project('master', 'c')
-dep = dependency('simple', required : false)
-if dep.found()
-  i = []
-  l = []
-else
-  sp = subproject('simple') # This is a name of a subdirectory in subprojects.
-  i = sp.get_variable('i')
-  l = sp.get_variable('l')
-endif
-exe = executable('prog', 'prog.c', include_directories : i, link_with : l,
+dep = dependency('simple', fallback : ['simple', 'simple_dep']
+exe = executable('prog', 'prog.c',
                  dependencies : dep, install : true)
 </code></pre>
-<p>With this setup the system dependency is used when it is available, otherwise we fall back on the bundled version.</p>
-<p>It should be noted that this only works for subprojects that are built with Meson. It can not be used with any other build system. The reason is the simple fact that there is no possible way to do this reliably with mixed build systems.</p>
-<p>Subprojects can use other subprojects, but all subprojects must reside in the top level <code>subprojects</code> directory. Recursive use of subprojects is not allowed, though, so you can't have subproject <code>a</code> that uses subproject <code>b</code> and have <code>b</code> also use <code>a</code>.</p>
-<h2 id="subprojects-and-dependencies">Subprojects and dependencies</h2>
-<p>A common use case is to use subprojects to provide dependencies on platforms that do not provide them out of the box. This is especially common on Windows. Meson makes this easy while at the same time using system dependencies if are available. The way to do this is to set up a subproject that builds the dependency and has an internal dependency declared like this:</p>
-<pre><code class="language-meson">proj_dep = declare_dependency(...)
+<p>With this setup the system dependency is used when it is available,
+otherwise we fall back on the bundled version. If you wish to always
+use the embedded version, then you would declare it like this:</p>
+<pre><code class="language-meson">simple_sp = subproject('simple')
+dep = simple_sp.get_variable('simple_dep')
 </code></pre>
-<p>Then you can use the subproject in the master project like this:</p>
-<pre><code class="language-meson">sp_dep = dependency('subproj_pkgconfig_name', fallback : ['subproj_name', 'proj_dep'])
-</code></pre>
-<p>This uses the system dependency when available and the self built version if not. If you want to always use the subproject, that is also possible, just use <code>subproject</code> and <code>get_variable</code> as discussed above to get the dependency object.</p>
+<p>All Meson features of the subproject, such as project options keep
+working and can be set in the master project. There are a few
+limitations, the most important being that global compiler arguments
+must be set in the main project before calling subproject. Subprojects
+must not set global arguments because there is no way to do that
+reliably over multiple subprojects. To check whether you are running
+as a subproject, use the <code>is_subproject</code> function.</p>
+<p>It should be noted that this only works for subprojects that are built
+with Meson. It can not be used with any other build system. The reason
+is the simple fact that there is no possible way to do this reliably
+with mixed build systems.</p>
+<p>Subprojects can use other subprojects, but all subprojects must reside
+in the top level <code>subprojects</code> directory. Recursive use of subprojects
+is not allowed, though, so you can't have subproject <code>a</code> that uses
+subproject <code>b</code> and have <code>b</code> also use <code>a</code>.</p>
 <h1 id="obtaining-subprojects">Obtaining subprojects</h1>
-<p>Meson ships with a dependency system to automatically obtain dependency subprojects. It is documented in the <a href="Wrap-dependency-system-manual.html">Wrap dependency system manual</a>.</p>
+<p>Meson ships with a dependency system to automatically obtain
+dependency subprojects. It is documented in the <a href="Wrap-dependency-system-manual.html">Wrap dependency
+system manual</a>.</p>
 
 </div>
 
