--- a/Users.html
+++ b/Users.html
@@ -199,9 +199,13 @@ $('body').removeClass('no-script');
 <li>
 <a href="https://github.com/hexchat/hexchat">HexChat</a>, a cross-platform IRC client in C</li>
 <li>
+<a href="https://cgit.freedesktop.org/xorg/app/intel-gpu-tools/">IGT</a>, Linux kernel graphics driver test suite.</li>
+<li>
 <a href="https://git.gnome.org/browse/json-glib">Json-glib</a>, GLib-based JSON manipulation library</li>
 <li>
 <a href="https://github.com/att/ast">Ksh</a>, a Korn Shell</li>
+<li>
+<a href="https://cgit.freedesktop.org/drm/libdrm/">Libdrm</a>, a library for abstracting DRM kernel interfaces</li>
 <li>
 <a href="https://github.com/anholt/libepoxy/">Libepoxy</a>, a library for handling OpenGL function pointer management</li>
 <li>
@@ -210,6 +214,8 @@ $('body').removeClass('no-script');
 <a href="https://github.com/grindhold/libhttpseverywhere">Libhttpseverywhere</a>, a library to enable httpseverywhere on any desktop app</li>
 <li><a href="https://github.com/Antergos/lightdm-webkit2-greeter">Lightdm-Webkit2-Greeter</a></li>
 <li><a href="https://github.com/kiwix/kiwix-lib">Kiwix libraries</a></li>
+<li>
+<a href="https://www.mesa3d.org/">Mesa</a>, An open source graphics driver project</li>
 <li>
 <a href="https://git.gnome.org/browse/nautilus/commit/?id=ed5652c89ac0654df2e82b54b00b27d51c825465">Nautilus</a> the Gnome file manager</li>
 <li>
