--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -1660,7 +1660,7 @@ not specified, causes a fatal error</p>
 <p><code>length()</code>, the size of the array</p>
 </li>
 </ul>
-<p>You can also iterate over arrays with the <a href="https://github.com/mesonbuild/meson/wiki/Syntax#foreach-statements"><code>foreach</code>
+<p>You can also iterate over arrays with the <a href="Syntax.html#foreach-statements"><code>foreach</code>
 statement</a>.</p>
 <h2 id="returned-objects">Returned objects</h2>
 <p>These are objects returned by the <a href="Reference-manual.html#functions">functions listed above</a>.</p>
