--- a/i18n-module.html
+++ b/i18n-module.html
@@ -202,7 +202,7 @@ for for their value</li>
 </ul>
 <h3 id="i18nmerge_file">i18n.merge_file()</h3>
 <p>This merges translations into a text file using <code>msgfmt</code>. See
-<a href="https://github.com/mesonbuild/meson/wiki/Reference%20manual#custom_target">custom_target</a>
+<a href="Reference-manual.html#custom_target">custom_target</a>
 for normal keywords. In addition it accepts these keywords:</p>
 <ul>
 <li>
