--- a/Users.html
+++ b/Users.html
@@ -169,11 +169,19 @@ $('body').removeClass('no-script');
 <li>
 <a href="https://github.com/systemd/casync">casync</a>, Content-Addressable Data Synchronization Tool</li>
 <li>
+<a href="https://github.com/linuxmint/cinnamon-desktop">cinnamon-desktop</a>, the cinnamon desktop library</li>
+<li>
+<a href="https://github.com/bus1/dbus-broker">dbus-broker</a>, Linux D-Bus Message Broker</li>
+<li>
 <a href="http://dpdk.org/ml/archives/dev/2018-January/089724.html">Dpdk</a>, Data plane development kit, a set of libraries and drivers for fast packet processing</li>
+<li>
+<a href="https://github.com/doitsujin/dxvk">DXVK</a>, a Vulkan-based Direct3D 11 implementation for Linux using Wine</li>
 <li>
 <a href="https://github.com/ebassi/emeus">Emeus</a>, Constraint based layout manager for GTK+</li>
 <li>
 <a href="https://www.frida.re/">Frida</a>, a dynamic binary instrumentation toolkit</li>
+<li>
+<a href="https://github.com/hughsie/fwupd">fwupd</a>, a simple daemon to allow session software to update firmware</li>
 <li>
 <a href="https://wiki.gnome.org/Apps/Geary">Geary</a>, an email application built around conversations, for the GNOME 3 desktop.</li>
 <li>
@@ -199,9 +207,13 @@ $('body').removeClass('no-script');
 <li>
 <a href="https://gitlab.com/csoriano/GtkDApp">GtkDApp</a>, an application template for developing Flatpak apps with Gtk+ and D</li>
 <li>
+<a href="https://github.com/bil-elmoussaoui/Hardcode-Tray">Hardcode-Tray</a>, fixes hardcoded tray icons in Linux</li>
+<li>
 <a href="https://github.com/hexchat/hexchat">HexChat</a>, a cross-platform IRC client in C</li>
 <li>
 <a href="https://cgit.freedesktop.org/xorg/app/intel-gpu-tools/">IGT</a>, Linux kernel graphics driver test suite.</li>
+<li>
+<a href="https://github.com/open-source-parsers/jsoncpp">JsonCpp</a>, a C++ library for interacting with JSON</li>
 <li>
 <a href="https://git.gnome.org/browse/json-glib">Json-glib</a>, GLib-based JSON manipulation library</li>
 <li>
@@ -211,15 +223,26 @@ $('body').removeClass('no-script');
 <li>
 <a href="https://github.com/anholt/libepoxy/">Libepoxy</a>, a library for handling OpenGL function pointer management</li>
 <li>
+<a href="https://github.com/libfuse/libfuse">libfuse</a>, the reference implementation of the Linux FUSE (Filesystem in Userspace) interface</li>
+<li>
 <a href="https://git.gnome.org/browse/libgit2-glib/">Libgit2-glib</a>, a GLib wrapper for libgit2</li>
 <li>
 <a href="https://github.com/grindhold/libhttpseverywhere">Libhttpseverywhere</a>, a library to enable httpseverywhere on any desktop app</li>
+<li>
+<a href="https://github.com/Framstag/libosmscout">Libosmscout</a>, a C++ library for offline map rendering, routing and location<br>
+lookup based on OpenStreetMap data</li>
+<li>
+<a href="https://github.com/intel/libva">Libva</a>, an implementation for the VA (VIdeo Acceleration) API</li>
 <li><a href="https://github.com/Antergos/lightdm-webkit2-greeter">Lightdm-Webkit2-Greeter</a></li>
 <li><a href="https://github.com/kiwix/kiwix-lib">Kiwix libraries</a></li>
 <li>
 <a href="https://www.mesa3d.org/">Mesa</a>, An open source graphics driver project</li>
 <li>
-<a href="https://git.gnome.org/browse/nautilus/commit/?id=ed5652c89ac0654df2e82b54b00b27d51c825465">Nautilus</a> the Gnome file manager</li>
+<a href="https://github.com/albfan/miraclecast">MiracleCast</a>, connect external monitors to your system via Wifi-Display specification aka Miracast</li>
+<li>
+<a href="https://git.gnome.org/browse/nautilus/commit/?id=ed5652c89ac0654df2e82b54b00b27d51c825465">Nautilus</a>, the Gnome file manager</li>
+<li>
+<a href="https://github.com/linuxmint/nemo">Nemo</a>, the file manager for the Cinnamon desktop environment</li>
 <li>
 <a href="http://cgit.freedesktop.org/gstreamer/orc/">Orc</a>, the Optimized Inner Loop Runtime Compiler (not the default yet)</li>
 <li>
@@ -231,9 +254,13 @@ $('body').removeClass('no-script');
 <li>
 <a href="https://pipewire.org/">PipeWire</a>, a framework for video and audio for containerized applications</li>
 <li>
+<a href="https://github.com/pithos/pithos">Pithos</a>, a Pandora Radio client</li>
+<li>
 <a href="http://pitivi.org/">Pitivi</a>, a nonlinear video editor</li>
 <li>
 <a href="https://git.gnome.org/browse/polari">Polari</a>, an IRC client</li>
+<li>
+<a href="https://github.com/radare/radare2">radare2</a>, unix-like reverse engineering framework and commandline tools (not the default)</li>
 <li>
 <a href="https://github.com/libfuse/sshfs">SSHFS</a>, allows you to mount a remote filesystem using SFTP</li>
 <li>
@@ -241,9 +268,13 @@ $('body').removeClass('no-script');
 <li>
 <a href="https://github.com/systemd/systemd">systemd</a>, the init system</li>
 <li>
+<a href="https://github.com/dimkr/szl">szl</a>, a lightweight, embeddable scripting language</li>
+<li>
 <a href="https://taisei-project.org/">Taisei Project</a>, an open-source Touhou Project clone and fangame</li>
 <li>
-<a href="https://cgit.freedesktop.org/xorg/xserver/">Xorg</a> the X.org display server (not the default yet)</li>
+<a href="https://github.com/eyelash/xi-gtk">xi-gtk</a>, a GTK+ front-end for the Xi editor</li>
+<li>
+<a href="https://cgit.freedesktop.org/xorg/xserver/">Xorg</a>, the X.org display server (not the default yet)</li>
 <li>
 <a href="https://github.com/valum-framework/valum">Valum</a>, a micro web framework written in Vala</li>
 <li>
@@ -251,7 +282,7 @@ $('body').removeClass('no-script');
 <li>
 <a href="https://github.com/swaywm/wlroots">wlroots</a>, a modular Wayland compositor library</li>
 <li>
-<a href="https://github.com/facebook/zstd/commit/4dca56ed832c6a88108a2484a8f8ff63d8d76d91">ZStandard</a> a compression algorithm developed at Facebook (not used by default)</li>
+<a href="https://github.com/facebook/zstd/commit/4dca56ed832c6a88108a2484a8f8ff63d8d76d91">ZStandard</a>, a compression algorithm developed at Facebook (not used by default)</li>
 </ul>
 <p>Note that a more up-to-date list of GNOME projects that use Meson can be found <a href="https://wiki.gnome.org/Initiatives/GnomeGoals/MesonPorting">here</a>.</p>
 
