--- a/Using-wraptool.html
+++ b/Using-wraptool.html
@@ -159,10 +159,10 @@ $('body').removeClass('no-script');
 				
 <div id="page-description" data-hotdoc-source="Using-wraptool.md" data-hotdoc-role="main">
 <h1 id="using-wraptool">Using wraptool</h1>
-<p>Wraptool is a helper tool that allows you to manage your source
-dependencies using the WrapDB database. It gives you all things you
-would expect, such as installing and updating dependencies. The wrap
-tool works on all platforms, the only limitation is that the wrap
+<p>Wraptool is a subcommand of Meson that allows you to manage your
+source dependencies using the WrapDB database. It gives you all things
+you would expect, such as installing and updating dependencies. The
+wrap tool works on all platforms, the only limitation is that the wrap
 definition works on your target platform. If you find some Wraps that
 don't work, please file bugs or, even better, patches.</p>
 <p>All code examples here assume that you are running the commands in
@@ -171,7 +171,7 @@ are commands to type.</p>
 <h2 id="simple-querying">Simple querying</h2>
 <p>The simplest operation to do is to query the list of packages
 available. To list them all issue the following command:</p>
-<pre><code>$ wraptool list
+<pre><code>$ meson wrap list
 box2d
 enet
 gtest
@@ -187,12 +187,12 @@ zlib
 </code></pre>
 <p>Usually you want to search for a specific package. This can be done
 with the <code>search</code> command:</p>
-<pre><code>$ wraptool search jpeg
+<pre><code>$ meson wrap search jpeg
 libjpeg
 </code></pre>
 <p>To determine which versions of libjpeg are available to install, issue
 the <code>info</code> command:</p>
-<pre><code>$ wraptool info libjpeg
+<pre><code>$ meson wrap info libjpeg
 Available versions of libjpeg:
   9a 2
 </code></pre>
@@ -204,25 +204,25 @@ releases. You should always use the newest available release.</p>
 <p>Installing dependencies is just as straightforward. First just create
 the <code>subprojects</code> directory at the top of your source tree and issue
 the install command.</p>
-<pre><code>$ wraptool install libjpeg
+<pre><code>$ meson wrap install libjpeg
 Installed libjpeg branch 9a revision 2
 </code></pre>
 <p>Now you can issue a <code>subproject('libjpeg')</code> in your <code>meson.build</code> file
 to use it.</p>
 <p>To check if your projects are up to date you can issue the <code>status</code> command.</p>
-<pre><code>$ wraptool status
+<pre><code>$ meson wrap status
 Subproject status
  libjpeg up to date. Branch 9a, revision 2.
  zlib not up to date. Have 1.2.8 2, but 1.2.8 4 is available.
 </code></pre>
 <p>In this case <code>zlib</code> has a newer release available. Updating it is
 straightforward:</p>
-<pre><code>$ wraptool update zlib
+<pre><code>$ meson wrap update zlib
 Updated zlib to branch 1.2.8 revision 4
 </code></pre>
 <p>Wraptool can do other things besides these. Documentation for these
 can be found in the command line help, which can be accessed by
-<code>wraptool --help</code>.</p>
+<code>meson wrap --help</code>.</p>
 <h2 id="promoting-dependencies">Promoting dependencies</h2>
 <p>Meson will only search for subprojects from the top level
 <code>subprojects</code> directory. If you have subprojects that themselves have
